<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:src="@drawable/panel_mode_preview"
            android:contentDescription="@null" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" >

        <RadioButton
            android:id="@+id/off_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:text="@string/off_mode_title"
            android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
            android:paddingStart="20dp" />

        <RadioButton
            android:id="@+id/srgb_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:text="@string/srgb_mode_title"
            android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
            android:paddingStart="20dp" />

        <RadioButton
            android:id="@+id/dci_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:text="@string/dci_mode_title_new"
            android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
            android:paddingStart="20dp" />
    </RadioGroup>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dc_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:text="@string/dc_dimming_mode_title"
        android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
        android:paddingStart="20dp" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/otg_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:text="@string/otg_mode_title"
        android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
        android:paddingStart="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingTop="20dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outline_24dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical"
            android:paddingStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panel_mode_info"
            android:paddingStart="24dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
